컬렉션 제거, _posts로 완전 통합

--- a/_posts/2026-01-10-dev-log.md
+++ b/_posts/2026-01-10-dev-log.md
@@ -1,9 +1,10 @@
 ---
+layout: post
 title: 개발 일지 시작
 description: 첫 개발 로그
 date: 2026-01-10
+categories: Log
 tags: [일지, 시작]
-permalink: /log/dev-log/
 ---
 
 # 개발 일지 시작
@@ -16,5 +17,3 @@ permalink: /log/dev-log/
 - 버그 해결 과정
 - 개발 일지
 - 트러블슈팅 기록
-
-글을 작성하면 자동으로 이곳에 표시됩니다.
