--- a/_posts/2026-01-10-hello.md
+++ b/_posts/2026-01-10-hello.md
@@ -1,9 +1,10 @@
 ---
+layout: post
 title: 안녕하세요, Mika입니다!
 description: 저를 소개합니다
 date: 2026-01-10
+categories: Bridge
 tags: [소개, 커리어]
-permalink: /bridge/hello/
 ---
 
 # 반갑습니다! 👋
@@ -16,5 +17,3 @@ permalink: /bridge/hello/
 - 저에 대한 소개
 - 커리어 여정
 - 개발자로서의 성장 이야기
-
-글을 작성하면 자동으로 이곳에 표시됩니다.
