--- a/_posts/2026-01-10-hello.md
+++ b/_posts/2026-01-10-hello.md
@@ -3,7 +3,7 @@ layout: post
 title: 안녕하세요, Mika입니다!
 description: 저를 소개합니다
 date: 2026-01-10
-categories: Bridge
+categories: bridge
 tags: [소개, 커리어]
 ---
 
