Add 404 troubleshooting post to Log

--- a/_posts/2026-01-10-dev-log.md
+++ b/_posts/2026-01-10-dev-log.md
@@ -1,19 +1,114 @@
 ---
 layout: post
-title: 개발 일지 시작
-description: 첫 개발 로그
+title: "Jekyll 404 에러 트러블슈팅"
+description: permalink와 categories 대소문자 불일치 해결
 date: 2026-01-10
 categories: log
-tags: [일지, 시작]
+tags: [트러블슈팅, Jekyll, GitHub-Pages]
 ---
 
-# 개발 일지 시작
+# Jekyll 404 에러 트러블슈팅
 
-이곳은 **Log** 카테고리입니다.  
-에러 해결과 개발 일지를 담는 공간입니다.
+**Status:** ✅ SOLVED | **Category:** Jekyll | **Difficulty:** ★★☆☆☆
 
-## 이 카테고리에서는...
+---
 
-- 버그 해결 과정
-- 개발 일지
-- 트러블슈팅 기록
+## 🔥 문제 상황
+
+블로그 홈페이지와 카테고리 페이지는 정상적으로 보이는데, **개별 포스트 링크를 클릭하면 404 에러**가 발생했다.
+
+```
+https://mik-a-ela.github.io/bridge/hello/  → 404 Not Found
+https://mik-a-ela.github.io/lab/number-guessing-game/  → 404 Not Found
+```
+
+---
+
+## 🔍 원인 분석
+
+### _config.yml의 permalink 설정
+```yaml
+permalink: /:categories/:title/
+```
+
+이 설정은 포스트의 `categories` 값을 URL 경로로 사용한다.
+
+### 문제의 핵심: 대소문자 불일치
+
+| 파일 | categories 값 | 생성되는 URL |
+|------|---------------|--------------|
+| hello.md | `Bridge` | `/Bridge/hello/` |
+| python-basics.md | `Insight` | `/Insight/python-basics/` |
+
+하지만 카테고리 페이지와 네비게이션은 **소문자 URL** (`/bridge/`, `/insight/`)을 사용하고 있었다!
+
+```liquid
+<!-- index.html에서 소문자로 변환 -->
+{% assign cat = post.categories | first | downcase %}
+```
+
+**결과:** 
+- 링크는 `/bridge/hello/`로 생성
+- 실제 Jekyll이 빌드한 경로는 `/Bridge/hello/`
+- 대소문자가 달라서 **404 발생!**
+
+---
+
+## 🛠️ 해결 방법
+
+### 1. 모든 포스트의 categories를 소문자로 통일
+
+**Before:**
+```yaml
+categories: Bridge
+categories: Insight
+categories: Lab
+categories: Log
+```
+
+**After:**
+```yaml
+categories: bridge
+categories: insight
+categories: lab
+categories: log
+```
+
+### 2. category.html 레이아웃 수정
+
+기존에는 존재하지 않는 Jekyll Collection을 참조하고 있었다:
+
+```liquid
+<!-- ❌ 잘못된 방식: site[page.collection]은 별도 컬렉션 참조 -->
+{% assign posts = site[page.collection] | sort: 'date' | reverse %}
+```
+
+`site.posts`에서 카테고리로 필터링하도록 수정:
+
+```liquid
+<!-- ✅ 올바른 방식: site.posts에서 카테고리 필터링 -->
+{% assign category_name = page.title | downcase %}
+{% assign posts = site.posts | where_exp: "post", "post.categories contains category_name" %}
+```
+
+---
+
+## ✅ 결과
+
+모든 포스트 링크가 정상 작동!
+
+| URL | 상태 |
+|-----|------|
+| `/bridge/hello/` | ✅ 정상 |
+| `/insight/python-basics/` | ✅ 정상 |
+| `/lab/number-guessing-game/` | ✅ 정상 |
+| `/log/dev-log/` | ✅ 정상 |
+
+---
+
+## 📚 배운 점
+
+- Jekyll permalink에서 `:categories`는 **대소문자를 그대로 유지**한다
+- URL 일관성을 위해 categories는 **항상 소문자로 작성**하자
+- Jekyll Collection(`site[name]`)과 Posts(`site.posts`)는 다르다
+- 문제 발생 시 **생성되는 URL 경로**를 직접 확인하자
