Update post title to include 'w/ Antigravity'

--- a/_posts/2026-01-10-dev-log.md
+++ b/_posts/2026-01-10-dev-log.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: "Jekyll 404 에러 트러블슈팅"
+title: "Jekyll 404 에러 트러블슈팅 w/ Antigravity"
 description: permalink와 categories 대소문자 불일치 해결
 date: 2026-01-10
 categories: log
 tags: [트러블슈팅, Jekyll, GitHub-Pages]
 ---
 
-# Jekyll 404 에러 트러블슈팅
+# Jekyll 404 에러 트러블슈팅 w/ Antigravity
 
 **Status:** ✅ SOLVED | **Category:** Jekyll | **Difficulty:** ★★☆☆☆
 
