Add note on Antigravity's contribution
Added a note about Antigravity's role in the process.

--- a/_posts/2026-01-10-dev-log.md
+++ b/_posts/2026-01-10-dev-log.md
@@ -112,3 +112,4 @@ categories: log
 - URL 일관성을 위해 categories는 **항상 소문자로 작성**하자
 - Jekyll Collection(`site[name]`)과 Posts(`site.posts`)는 다르다
 - 문제 발생 시 **생성되는 URL 경로**를 직접 확인하자
+- 사실 Antigravity가 다 해줬다. 그런데 얘도 모르고 나도 몰라서 2시간을 헤맸다ㅠㅠ
