Add published status to dev log post
Add published status to the dev log post.

--- a/_posts/2026-01-10-dev-log.md
+++ b/_posts/2026-01-10-dev-log.md
@@ -5,6 +5,8 @@ description: permalink와 categories 대소문자 불일치 해결
 date: 2026-01-10
 categories: log
 tags: [트러블슈팅, Jekyll, GitHub-Pages]
+published: false
+
 ---
 
 # Jekyll 404 에러 트러블슈팅 w/ Antigravity
